--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@
 							<img class="card-img-top" src="assets/images/blog/blog-post-800x560-card.png" alt="image">
 							<div class="card-body">
 								<h5 class="card-title"><a class="theme-link" href="blog-post.html">About this Blog</a></h5>
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient...</p>
+								<p class="card-text">This is the inaguaral post that introduces the blog, why I started it, and what I intend to write about.</p>
 								<p class="mb-0"><a class="more-link" href="blog-post.html">Read more &rarr;</a></p>
 							</div>
 							<div class="card-footer">
-								<small class="text-muted">Published a week ago</small>
+								<small class="text-muted">Published June 2020</small>
 								
 							</div>
 						</div><!--//card-->
