fixes links to first blog post

--- a/blog-home.html
+++ b/blog-home.html
@@ -102,7 +102,7 @@
 				    <div class="media">
 					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/blog/blog-post-300x300-thumb.png" alt="image">
 					    <div class="media-body">
-						    <h3 class="title mb-1"><a href="blog-2021-coming-soon.html">About this Blog</a></h3>
+						    <h3 class="title mb-1"><a href="blog-2021-about-this-blog.html">About this Blog</a></h3>
 						    <div class="meta mb-1"><span class="date">Published June 2020</span><span class="time">1 min read</span><span class="comment"></span></div>
 						    <div class="intro">This is the inaguaral post that introduces the blog, why I started it, and what I intend to write about.</div>
 						    <a class="more-link" href="blog-2021-about-this-blog.html">Read more &rarr;</a>
