--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
 						<div class="card blog-post-card">
 							<img class="card-img-top" src="assets/images/blog/blog-post-800x560-card.png" alt="image">
 							<div class="card-body">
-								<h5 class="card-title"><a class="theme-link" href="blog-post.html">About this Blog</a></h5>
+								<h5 class="card-title"><a class="theme-link" href="blog-2021-about-this-blog.html">About this Blog</a></h5>
 								<p class="card-text">This is the inaguaral post that introduces the blog, why I started it, and what I intend to write about.</p>
-								<p class="mb-0"><a class="more-link" href="blog-post.html">Read more &rarr;</a></p>
+								<p class="mb-0"><a class="more-link" href="blog-2021-about-this-blog.html">Read more &rarr;</a></p>
 							</div>
 							<div class="card-footer">
 								<small class="text-muted">Published June 2020</small>
