adds intro to odmlib post

--- a/index.html
+++ b/index.html
@@ -193,13 +193,13 @@
 						<div class="card blog-post-card">
 							<img class="card-img-top" src="assets/images/blog/blog-post-thumb-card-3.jpg" alt="image">
 							<div class="card-body">
-								<h5 class="card-title"><a class="theme-link" href="blog-post.html">Introducing odmlib</a></h5>
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient...</p>
-								<p class="mb-0"><a class="more-link" href="blog-post.html">Read more &rarr;</a></p>
+								<h5 class="card-title"><a class="theme-link" href="blog-2021-intro-to-odmlib.html">Introducing odmlib</a></h5>
+								<p class="card-text">This post introduces the odmlib Python package that provides an object-oriented way to create and process ODM files as well as extensions like Define-XML.</p>
+								<p class="mb-0"><a class="more-link" href="blog-2021-intro-to-odmlib.html">Read more &rarr;</a></p>
 								
 							</div>
 							<div class="card-footer">
-								<small class="text-muted">Published 2 days ago</small>
+								<small class="text-muted">Published June 2021</small>
 							</div>
 						</div><!--//card-->
 					</div><!--//col-->
@@ -212,7 +212,7 @@
 								<p class="mb-0"><a class="more-link" href="blog-2021-about-this-blog.html">Read more &rarr;</a></p>
 							</div>
 							<div class="card-footer">
-								<small class="text-muted">Published June 2020</small>
+								<small class="text-muted">Published June 2021</small>
 								
 							</div>
 						</div><!--//card-->
