--- a/blog-home.html
+++ b/blog-home.html
@@ -91,10 +91,10 @@
 				    <div class="media">
 					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/blog/blog-post-thumb-3.jpg" alt="image">
 					    <div class="media-body">
-						    <h3 class="title mb-1"><a href="blog-2021-coming-soon.html">Introducing odmlib</a></h3>
-						    <div class="meta mb-1"><span class="date">Published this week</span><span class="time">5 min read</span><span class="comment"><a href="#">0 comments</a></span></div>
-						    <div class="intro">This blog post is coming soon...</div>
-						    <a class="more-link" href="blog-2021-coming-soon.html">Read more &rarr;</a>
+						    <h3 class="title mb-1"><a href="blog-2021-intro-to-odmlib.html">Introducing odmlib</a></h3>
+						    <div class="meta mb-1"><span class="date">Published June 2021</span><span class="time">2 min read</span><span class="comment"><a href="#">0 comments</a></span></div>
+						    <div class="intro">This post introduces the odmlib Python package that provides an object-oriented way to create and process ODM files as well as extensions like Define-XML.</div>
+						    <a class="more-link" href="blog-2021-intro-to-odmlib.html">Read more &rarr;</a>
 					    </div><!--//media-body-->
 				    </div><!--//media-->
 			    </div><!--//item-->
@@ -103,7 +103,7 @@
 					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/blog/blog-post-300x300-thumb.png" alt="image">
 					    <div class="media-body">
 						    <h3 class="title mb-1"><a href="blog-2021-about-this-blog.html">About this Blog</a></h3>
-						    <div class="meta mb-1"><span class="date">Published June 2020</span><span class="time">1 min read</span><span class="comment"></span></div>
+						    <div class="meta mb-1"><span class="date">Published June 2021</span><span class="time">1 min read</span><span class="comment"></span></div>
 						    <div class="intro">This is the inaguaral post that introduces the blog, why I started it, and what I intend to write about.</div>
 						    <a class="more-link" href="blog-2021-about-this-blog.html">Read more &rarr;</a>
 					    </div><!--//media-body-->
