updates links to new content

--- a/portfolio.html
+++ b/portfolio.html
@@ -106,7 +106,7 @@
 								</div>
 								<div class="col-lg-8">
 									<div class="card-body">
-										<h5 class="card-title"><a href="project-odmlib.html" class="theme-link">odmlib</a></h5>
+										<h5 class="card-title"><a href="https://github.com/swhume/odmlib" class="theme-link">odmlib</a></h5>
 										<p class="card-text">
 											The odmlib package enables Python developers to work with CDISC ODM data exchange standard and its extensions, such as Define-XML, as a Python object model. The odmlib package simplifies generating and parsing ODM, and makes it easy to create and use custom extensions. 
 									    </p>
