adds define-xml v2.1 blog post and images

--- a/blog-2021-about-this-blog.html
+++ b/blog-2021-about-this-blog.html
@@ -88,7 +88,7 @@
 				        <a href="https://github.com/swhume/swhume.github.io"><img class="img-fluid" src="assets/images/blog/perfect-blog-post-1024x576.jpg" alt="image"></a>
 				    </figure>
 
-				    <p>I started the Munging Metadata blog on blogspot in 2013, but really didn’t dedicate much time to it. There were always more pressing demands on my time. Now I’m renewing my commitment to blogging by moving it to my Github site and dedicating it to highlighting my personal technical projects as well as discussing technical topics related to my work at CDISC.</p>
+				    <p>I started the Munging Metadata blog on blogspot in 2013, but really didn’t dedicate much time to it. There were always more pressing demands on my time. Now I’m renewing my commitment to blogging by moving it to my GitHub site and dedicating it to highlighting my personal technical projects as well as discussing technical topics related to my work at CDISC.</p>
 
 					<p>For those that don’t know me, you can check out the <a href="https://swhume.github.io/index.html">About Me</a> page on this site or on <a href="https://www.linkedin.com/in/sam-hume-dsc">LinkedIn</a>. This blog will cover topics of interest related to software, standards, and clinical research informatics. Most of the posts will be technical, and my non-technical writing may more likely be found on the CDISC web site.</p>
 
