--- a/blog-2021-intro-to-odmlib.html
+++ b/blog-2021-intro-to-odmlib.html
@@ -85,7 +85,7 @@
 			    
 			    <div class="blog-post-body">
 				    <figure class="blog-banner">
-				        <a href="https://github.com/swhume/swhume.github.io"><img class="img-fluid" src="assets/images/blog/blog-post-thumb-card-3.jpg" alt="image"></a>
+				        <a href="https://github.com/swhume/swhume.github.io"><img class="img-fluid" src="assets/images/blog/blog-post-odmlib-800x560.png" alt="image"></a>
 				    </figure>
 
 				    <p>As a Python developer I’ve had an interest in an ODM library that makes it easy to work with ODM and Define-XML documents. During the CDISC 360 project, I worked on generating ODM and Define-XML documents using an object-oriented approach. As I moved on from development work on the project, I decided to start developing a Python package that I could re-use on future projects and satisfy my personal interest in an object-oriented library for creating and processing ODM documents and its extensions. This package, named odmlib, remains under development but can be used for basic metadata processing.</p>
