--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 						<div class="card project-card">
 							<div class="row no-gutters">
 								<div class="col-lg-4 card-img-holder">
-									<img src="assets/images/project/project-4.jpg" class="card-img" alt="image">
+									<img src="assets/images/blog/blog-post-odmlib-300x300.png" class="card-img" alt="image">
 								</div>
 								<div class="col-lg-8">
 									<div class="card-body">
@@ -145,15 +145,15 @@
 						<div class="card project-card">
 							<div class="row no-gutters">
 								<div class="col-lg-4 card-img-holder">
-									<img src="assets/images/project/graph-nodes.png" class="card-img" alt="image">
+									<img src="assets/images/blog/blog-post-define-xml-300x300.jpg" class="card-img" alt="image">
 								</div>
 								<div class="col-lg-8">
 									<div class="card-body">
-										<h5 class="card-title"><a href="https://github.com/swhume/trace-xml-java" class="theme-link">trace-xml</a></h5>
+										<h5 class="card-title"><a href="https://github.com/swhume/odmlib_examples/tree/master/xlsx2define2-1" class="theme-link">xlsx2define2-1</a></h5>
 										<p class="card-text">
-										Trace-XML is a Java application and Define-XML v2.0 extension that delivers end-to-end, clinical data lifecycle traceability from data collection through analysis. It enables study metadata to be represented as a traceability graph that can be visualized, validated, and queried. 
+										xlsx2define2-1 is an odmlib example application that generates a Define-XML v2.1 file from an Excel metadata spreadsheet. The Exel spreadsheet makes it easier for many to edit or create new content to include in a Define-XML v2.1 file. 
 									    </p>
-										<p class="card-text"><small class="text-muted">This project is a Proof-of-Concept</small></p>
+										<p class="card-text"><small class="text-muted">This project is example code</small></p>
 									</div>
 								</div>
 							</div>
@@ -163,15 +163,15 @@
 						<div class="card project-card">
 							<div class="row no-gutters">
 								<div class="col-lg-4 card-img-holder">
-									<img src="assets/images/project/terminology.png" class="card-img" alt="image">
-								</div>
+									<img src="assets/images/project/project-4.jpg" class="card-img" alt="image">
+ 								</div>
 								<div class="col-lg-8">
 									<div class="card-body">
-										<h5 class="card-title"><a href="https://github.com/swhume/ncict2odm" class="theme-link">ncict2odm</a></h5>
+										<h5 class="card-title"><a href="https://github.com/swhume/odmlib_examples/tree/master/define2-1-to-xlsx" class="theme-link">define2-1-to-xlsx</a></h5>
 										<p class="card-text">
-											Ncict2odm is a Java application for converting the NCI EVS curated CIDSC Controlled Terminology tab delimited text files into ODM-based CT-XML files. It implements version 1.1.1 of the CT-XML extension to ODM v1.3.2. 
+											define2-1-to-xlsx is an odmlib example application that generates an Excel spreadsheet that contains the content of a Define-XML v2.1 file. The Exel spreadsheet makes it easier to edit or create new content to include in a Define-XML v2.1 file. 
 										</p>
-										<p class="card-text"><small class="text-muted">This project is Stable</small></p>
+										<p class="card-text"><small class="text-muted">This project is example code</small></p>
 									</div>
 								</div>
 							</div>
@@ -191,7 +191,21 @@
 				<div class="row">
 					<div class="col-md-4 mb-5">
 						<div class="card blog-post-card">
-							<img class="card-img-top" src="assets/images/blog/blog-post-thumb-card-3.jpg" alt="image">
+							<img class="card-img-top" src="assets/images/blog/blog-post-define-xml-800x560.jpg" alt="image">
+							<div class="card-body">
+								<h5 class="card-title"><a class="theme-link" href="blog-2021-generate-define-xml-1.html">Generating Define-XML v2.1 using odmlib</a></h5>
+								<p class="card-text">This post highlights an example program that demonstrates how to generate a Define-XML v2.1 file using a metadata spreadsheet.</p>
+								<p class="mb-0"><a class="more-link" href="blog-2021-generate-define-xml-1.html">Read more &rarr;</a></p>
+	
+							</div>
+							<div class="card-footer">
+								<small class="text-muted">Published August 2021</small>
+							</div>
+						</div><!--//card-->
+					</div><!--//col-->
+					<div class="col-md-4 mb-5">
+						<div class="card blog-post-card">
+							<img class="card-img-top" src="assets/images/blog/blog-post-odmlib-800x560.png" alt="image">
 							<div class="card-body">
 								<h5 class="card-title"><a class="theme-link" href="blog-2021-intro-to-odmlib.html">Introducing odmlib</a></h5>
 								<p class="card-text">This post introduces the odmlib Python package that provides an object-oriented way to create and process ODM files as well as extensions like Define-XML.</p>
