--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,45 @@
 						<div class="card project-card">
 							<div class="row no-gutters">
 								<div class="col-lg-4 card-img-holder">
+									<img src="assets/images/blog/blog-post-define-xml-300x300.jpg" class="card-img" alt="image">
+								</div>
+								<div class="col-lg-8">
+									<div class="card-body">
+										<h5 class="card-title"><a href="https://github.com/swhume/odmlib_examples/tree/master/xlsx2define2-1/" class="theme-link">xlsx2define2-1</a></h5>
+										<p class="card-text">
+											xlsx2define2-1 is an odmlib example application that generates a Define-XML v2.1 file from an Excel metadata spreadsheet. The Exel spreadsheet makes it easier for many to edit or create new content to include in a Define-XML v2.1 file. 
+									    </p>
+										<p class="card-text"><small class="text-muted">This project is example code</small></p>
+									</div>
+								</div>
+							</div>
+						</div><!--//card-->
+					</div><!--//col-->
+					<div class="isotope-item col-md-6 mb-5 cdisc odm">
+						<div class="card project-card">
+							<div class="row no-gutters">
+								<div class="col-lg-4 card-img-holder">
 									<img src="assets/images/project/project-4.jpg" class="card-img" alt="image">
+								</div>
+								<div class="col-lg-8">
+									<div class="card-body">
+										<h5 class="card-title"><a href="https://github.com/swhume/odmlib_examples/tree/master/define2-1-to-xlsx/" class="theme-link">define2-1-to-xlsx</a></h5>
+										<p class="card-text">
+											define2-1-to-xlsx is an odmlib example application that generates an Excel spreadsheet that contains the content of a Define-XML v2.1 file. The Exel spreadsheet makes it easier to edit or create new content to include in a Define-XML v2.1 file. 
+									    </p>
+										<p class="card-text"><small class="text-muted">This project is example code</small></p>
+									</div>
+								</div>
+							</div>
+						</div><!--//card-->
+					</div><!--//col-->
+
+
+					<div class="isotope-item col-md-6 mb-5 cdisc odm">
+						<div class="card project-card">
+							<div class="row no-gutters">
+								<div class="col-lg-4 card-img-holder">
+									<img src="assets/images/blog/blog-post-odmlib-300x300.png" class="card-img" alt="image">
 								</div>
 								<div class="col-lg-8">
 									<div class="card-body">
