--- a/blog-home.html
+++ b/blog-home.html
@@ -89,10 +89,21 @@
 		    <div class="container single-col-max-width">
 			    <div class="item mb-5">
 				    <div class="media">
-					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/blog/blog-post-thumb-3.jpg" alt="image">
+					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/blog/blog-post-define-xml-300x300.jpg" alt="image">
+					    <div class="media-body">
+						    <h3 class="title mb-1"><a href="blog-2021-generate-define-xml-1.html">Generating Define-XML v2.1 using odmlib</a></h3>
+						    <div class="meta mb-1"><span class="date">Published August 2021</span><span class="time">3 min read</span></div>
+						    <div class="intro">This post highlights an example program that demonstrates how to generate a Define-XML v2.1 file using a metadata spreadsheet.</div>
+						    <a class="more-link" href="blog-2021-generate-define-xml-1.html">Read more &rarr;</a>
+					    </div><!--//media-body-->
+				    </div><!--//media-->
+			    </div><!--//item-->
+			    <div class="item mb-5">
+				    <div class="media">
+					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/blog/blog-post-odmlib-300x300.png" alt="image">
 					    <div class="media-body">
 						    <h3 class="title mb-1"><a href="blog-2021-intro-to-odmlib.html">Introducing odmlib</a></h3>
-						    <div class="meta mb-1"><span class="date">Published June 2021</span><span class="time">2 min read</span><span class="comment"><a href="#">0 comments</a></span></div>
+						    <div class="meta mb-1"><span class="date">Published June 2021</span><span class="time">2 min read</span></div>
 						    <div class="intro">This post introduces the odmlib Python package that provides an object-oriented way to create and process ODM files as well as extensions like Define-XML.</div>
 						    <a class="more-link" href="blog-2021-intro-to-odmlib.html">Read more &rarr;</a>
 					    </div><!--//media-body-->
@@ -103,7 +114,7 @@
 					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/blog/blog-post-300x300-thumb.png" alt="image">
 					    <div class="media-body">
 						    <h3 class="title mb-1"><a href="blog-2021-about-this-blog.html">About this Blog</a></h3>
-						    <div class="meta mb-1"><span class="date">Published June 2021</span><span class="time">1 min read</span><span class="comment"></span></div>
+						    <div class="meta mb-1"><span class="date">Published June 2021</span><span class="time">1 min read</span></div>
 						    <div class="intro">This is the inaguaral post that introduces the blog, why I started it, and what I intend to write about.</div>
 						    <a class="more-link" href="blog-2021-about-this-blog.html">Read more &rarr;</a>
 					    </div><!--//media-body-->
