adds blog post links to blog-home and index

--- a/blog-home.html
+++ b/blog-home.html
@@ -87,6 +87,19 @@
 	    </section>
 	    <section class="blog-list px-3 py-5 p-md-5">
 		    <div class="container single-col-max-width">
+
+			    <div class="item mb-5">
+				    <div class="media">
+					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/blog/blog-post-xml2html-300x300.png" alt="image">
+					    <div class="media-body">
+						    <h3 class="title mb-1"><a href="blog-2022-generate-html-from-xml.html">Generating HTML from Define-XML</a></h3>
+						    <div class="meta mb-1"><span class="date">Published April 2022</span><span class="time">3 min read</span></div>
+						    <div class="intro">This post describes an an open-source, command-line method to convert Define-XML to HTML using the define2-1 stylesheet.</div>
+						    <a class="more-link" href="blog-2022-generate-html-from-xml.html">Read more &rarr;</a>
+					    </div><!--//media-body-->
+				    </div><!--//media-->
+			    </div><!--//item-->
+
 			    <div class="item mb-5">
 				    <div class="media">
 					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/blog/blog-post-define-xml-300x300.jpg" alt="image">
