--- a/index.html
+++ b/index.html
@@ -189,6 +189,22 @@
 			<div class="container">
 				<h2 class="section-title font-weight-bold mb-5">Featured Blog Posts</h2>
 				<div class="row">
+
+					<div class="col-md-4 mb-5">
+						<div class="card blog-post-card">
+							<img class="card-img-top" src="assets/images/blog/blog-post-xml2html-800x560.png" alt="image">
+							<div class="card-body">
+								<h5 class="card-title"><a class="theme-link" href="blog-2022-generate-html-from-xml.html">Generating HTML from Define-XML</a></h5>
+								<p class="card-text">This post describes an an open-source, command-line method to convert Define-XML to HTML using the define2-1 stylesheet.</p>
+								<p class="mb-0"><a class="more-link" href="blog-2022-generate-html-from-xml.html">Read more &rarr;</a></p>
+							</div>
+							<div class="card-footer">
+								<small class="text-muted">Published April 2022</small>
+								
+							</div>
+						</div><!--//card-->
+					</div><!--//col-->
+
 					<div class="col-md-4 mb-5">
 						<div class="card blog-post-card">
 							<img class="card-img-top" src="assets/images/blog/blog-post-define-xml-800x560.jpg" alt="image">
@@ -214,20 +230,6 @@
 							</div>
 							<div class="card-footer">
 								<small class="text-muted">Published June 2021</small>
-							</div>
-						</div><!--//card-->
-					</div><!--//col-->
-					<div class="col-md-4 mb-5">
-						<div class="card blog-post-card">
-							<img class="card-img-top" src="assets/images/blog/blog-post-800x560-card.png" alt="image">
-							<div class="card-body">
-								<h5 class="card-title"><a class="theme-link" href="blog-2021-about-this-blog.html">About this Blog</a></h5>
-								<p class="card-text">This is the inaguaral post that introduces the blog, why I started it, and what I intend to write about.</p>
-								<p class="mb-0"><a class="more-link" href="blog-2021-about-this-blog.html">Read more &rarr;</a></p>
-							</div>
-							<div class="card-footer">
-								<small class="text-muted">Published June 2021</small>
-								
 							</div>
 						</div><!--//card-->
 					</div><!--//col-->
