fixes small error in index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
           <p>This post highlights an example program that demonstrates how to generate a Define-XML v2.1 file using a metadata spreadsheet.</p>
       </li>
       <li>
-          <h2><a href="https://swhume.github.io/blog-2021-intro-to-odmlib.html"></a>Introducing odmlib</h2>
+          <h2><a href="https://swhume.github.io/blog-2021-intro-to-odmlib.html">Introducing odmlib</a></h2>
           <small>June 2021</small>
           <p>This post introduces the odmlib Python package that provides an object-oriented way to create and process ODM files as well as extensions like Define-XML.</p>
       </li>
