converts blog posts to md

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@ layout: default
 
 <ul>
       <li>
-          <h2><a href="https://swhume.github.io/blog-2022-generate-html-from-xml.html">Generating HTML from Define-XML</a></h2>
+          <h2><a href="https://swhume.github.io/generating-html-from-define">Generating HTML from Define-XML</a></h2>
           <small>April 2022</small>
           <p>This post describes an an open-source, command-line method to convert Define-XML to HTML using the define2-1 stylesheet.</p>
       </li>
       <li>
-          <h2><a href="https://swhume.github.io/blog-2021-generate-define-xml-1.html">Generating Define-XML v2.1 using odmlib</a></h2>
+          <h2><a href="https://swhume.github.io/generating-definev2-1-using-odmlib">Generating Define-XML v2.1 using odmlib</a></h2>
           <small>August 2021</small>
           <p>This post highlights an example program that demonstrates how to generate a Define-XML v2.1 file using a metadata spreadsheet.</p>
       </li>
       <li>
-          <h2><a href="https://swhume.github.io/blog-2021-intro-to-odmlib.html">Introducing odmlib</a></h2>
+          <h2><a href="https://swhume.github.io/introducing-odmlib">Introducing odmlib</a></h2>
           <small>June 2021</small>
           <p>This post introduces the odmlib Python package that provides an object-oriented way to create and process ODM files as well as extensions like Define-XML.</p>
       </li>
