updates index with latest blog post

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@ layout: default
 
 <ul>
       <li>
+          <h2><a href="https://swhume.github.io/why-json-for-datasets">Why JSON for Datasets?</a></h2>
+          <small>Jan 2024</small>
+          <p>This post explains the rationale for creating a dataset exchange format, Dataset-JSON, using JSON instead of alternative file formats and is motivated by the PHUSE/CDISC/FDA <i>Dataset-JSON as Alternative Transport Format for Regulatory Submissions</i> pilot project.</p>
+      </li>
+      <li>
           <h2><a href="https://swhume.github.io/generating-html-from-define">Generating HTML from Define-XML</a></h2>
           <small>April 2022</small>
           <p>This post describes an an open-source, command-line method to convert Define-XML to HTML using the define2-1 stylesheet.</p>
