adds 2 posts to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@ layout: default
           <p>This post explains the rationale for creating a dataset exchange format, Dataset-JSON, using JSON instead of alternative file formats and is motivated by the PHUSE/CDISC/FDA <i>Dataset-JSON as Alternative Transport Format for Regulatory Submissions</i> pilot project.</p>
       </li>
       <li>
+          <h2><a href="https://swhume.github.io/dataset-json-pilot">No More XPT? Piloting New Dataset-JSON for FDA Submissions</a></h2>
+          <small>July 2023</small>
+          <p>This post, originally published in Clinical Leader, introduces the PHUSE/CDISC/FDA <i>Dataset-JSON as an alternative transport format for regulatory submissions</i> pilot project.</p>
+      </li>      
+      <li>
+          <h2><a href="https://swhume.github.io/intro-to-core">The CDISC Open Rules Engine (CORE): Open-Source Software for Clinical Research</a></h2>
+          <small>April 2023</small>
+          <p>This post, originally published in Clinical Leader, introduces the CORE open-source software projects that provide the means to create and execute conformance rules.</p>
+      </li>      
+      <li>
           <h2><a href="https://swhume.github.io/generating-html-from-define">Generating HTML from Define-XML</a></h2>
           <small>April 2022</small>
           <p>This post describes an an open-source, command-line method to convert Define-XML to HTML using the define2-1 stylesheet.</p>
