--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@ layout: default
 
 <ul>
       <li>
+          <h2><a href="https://swhume.github.io/dataset-json-api">The Dataset-JSON API</a></h2>
+          <small>March 2024</small>
+          <p>This post builds on my previous Dataset-JSON post and covers a draft Dataset-JSON API specification created during a COSA Hackathon.</p>
+      </li>
+      <li>
           <h2><a href="https://swhume.github.io/why-json-for-datasets">Why JSON for Datasets?</a></h2>
           <small>Jan 2024</small>
           <p>This post explains the rationale for creating a dataset exchange format, Dataset-JSON, using JSON instead of alternative file formats and is motivated by the PHUSE/CDISC/FDA <i>Dataset-JSON as Alternative Transport Format for Regulatory Submissions</i> pilot project.</p>
