--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@ layout: default
 
 <ul>
       <li>
+          <h2><a href="https://swhume.github.io/how-ri-helps-standards">How Reference Implementations Benefit Standards</a></h2>
+          <small>July 2024</small>
+          <p>This post introduces software reference implementations and how they contribute to standards development and adoption. As CDISC focuses on standards implementation, reference implementations become increasingly important.</p>
+      </li>
+      <li>
           <h2><a href="https://swhume.github.io/dataset-json-api">The Dataset-JSON API</a></h2>
           <small>March 2024</small>
           <p>This post builds on my previous Dataset-JSON post and covers a draft Dataset-JSON API specification created during a COSA Hackathon.</p>
