adds Nov 2024 post to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@ layout: default
 
 <ul>
       <li>
+          <h2><a href="https://swhume.github.io/managing-model-releases">Managing Model Releases</a></h2>
+          <small>November 2024</small>
+          <p>
+                This post shares some thoughts on release management for the models that form the basis of many new CDISC standards. 
+                Because software applications are needed to effectively use these models, factoring the impact of software maintenance into 
+                standards release planning will become increasingly important.
+          </p>
+      </li>
+      <li>
           <h2><a href="https://swhume.github.io/how-ri-helps-standards">How Reference Implementations Benefit Standards</a></h2>
           <small>July 2024</small>
           <p>This post introduces software reference implementations and how they contribute to standards development and adoption. As CDISC focuses on standards implementation, reference implementations become increasingly important.</p>
@@ -15,7 +24,7 @@ layout: default
       </li>
       <li>
           <h2><a href="https://swhume.github.io/why-json-for-datasets">Why JSON for Datasets?</a></h2>
-          <small>Jan 2024</small>
+          <small>January 2024</small>
           <p>This post explains the rationale for creating a dataset exchange format, Dataset-JSON, using JSON instead of alternative file formats and is motivated by the PHUSE/CDISC/FDA <i>Dataset-JSON as Alternative Transport Format for Regulatory Submissions</i> pilot project.</p>
       </li>
       <li>
