new phuse blog posts

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@ layout: default
 
 <ul>
       <li>
+          <h2><a href="https://swhume.github.io/360i-technical-roadmap">Enable and Automate: A Technical Roadmap Defining CDISC's Path to End-to-End Automation</a></h2>
+          <small>Feb 2025</small>
+          <p>
+                This post is a PHUSE US Connect 2025 paper (DS05) that provides a high-level CDISC 360i Phase 1 Technical Roadmap.
+          </p>
+      </li>
+      <li>
           <h2><a href="https://swhume.github.io/managing-model-releases">Managing Model Releases</a></h2>
           <small>November 2024</small>
           <p>
@@ -38,9 +45,14 @@ layout: default
           <p>This post, originally published in Clinical Leader, introduces the CORE open-source software projects that provide the means to create and execute conformance rules.</p>
       </li>      
       <li>
+          <h2><a href="https://swhume.github.io/phuse-os01-odmlib">Using odmlib to Create ODM and Define-XML Tools in Python</a></h2>
+          <small>May 2022</small>
+          <p>This post is a PHUSE US Connect 2022 paper (OS01) that introduces the odmlib Python library for working with ODM and its extensions and spotlights using odmlib to generate a Define-XML v2.1 document.</p>
+      </li>
+      <li>
           <h2><a href="https://swhume.github.io/generating-html-from-define">Generating HTML from Define-XML</a></h2>
           <small>April 2022</small>
-          <p>This post describes an an open-source, command-line method to convert Define-XML to HTML using the define2-1 stylesheet.</p>
+          <p>This post describes an open-source, command-line method to convert Define-XML to HTML using the define2-1 stylesheet.</p>
       </li>
       <li>
           <h2><a href="https://swhume.github.io/generating-definev2-1-using-odmlib">Generating Define-XML v2.1 using odmlib</a></h2>
