adds index.html with the latest post

--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@ layout: default
 <ul>
       <li>
           <h2><a href="https://swhume.github.io/360i-technical-roadmap">Enable and Automate: A Technical Roadmap Defining CDISC's Path to End-to-End Automation</a></h2>
-          <small>Feb 2025</small>
+          <small>Mar 2025</small>
           <p>
                 This post is a PHUSE US Connect 2025 paper (DS05) that provides a high-level CDISC 360i Phase 1 Technical Roadmap.
+          </p>
+      </li>
+      <li>
+          <h2><a href="https://swhume.github.io/results-dataset-json-viewer-hackathon">Results from the COSA Dataset-JSON Viewer Hackathon</a></h2>
+          <small>Mar 2025</small>
+          <p>
+                This post provides insights and information on the recently completed COSA Dataset-JSON Viewer Hackathon.
           </p>
       </li>
       <li>
