updates index with latest posts

--- a/index.html
+++ b/index.html
@@ -4,6 +4,27 @@ layout: default
 
 <ul>
       <li>
+          <h2><a href="https://swhume.github.io/top-10-reasons-dsj-over-parquet">Top 10 Reasons for Using Dataset-JSON over Parquet for Data Exchange</a></h2>
+          <small>November 2025</small>
+          <p>
+                This post, also shared on LinkedIn, is an article that addresses questions regarding raised in advance of the R/Pharma 2025 Dataset-JSON Workshop.
+          </p>
+      </li>
+      <li>
+          <h2><a href="https://swhume.github.io/powering-standards-with-code">Powering Standards With Code: The Role Of Open Source In CDISC 360i (article)</a></h2>
+          <small>September 2025</small>
+          <p>
+                This post is a Clincal Tech Leader article based on a PHUSE SDE presentation on the same topic.
+          </p>
+      </li>
+      <li>
+          <h2><a href="https://swhume.github.io/phuse-sde-360i-oss">Powering Standards with Code: The Role of Open Source in CDISC 360i (presentation)</a></h2>
+          <small>July 2025</small>
+          <p>
+                This post is a presentation I delivered at the PHUSE SDE in West Windsor (NJ). It includes the slides and speaker notes.
+          </p>
+      </li>
+      <li>
           <h2><a href="https://swhume.github.io/360i-technical-roadmap">Enable and Automate: A Technical Roadmap Defining CDISC's Path to End-to-End Automation</a></h2>
           <small>Mar 2025</small>
           <p>
